Added direction for firewall settings

--- a/provisioning/roles/common/tasks/hardening.yml
+++ b/provisioning/roles/common/tasks/hardening.yml
@@ -41,6 +41,7 @@
   ufw:
     state: enabled
     policy: deny
+    direction: in
 
 
 # -------------------------------------------------------------------
