Set nginx client_max_body_size to 128M

--- a/provisioning/roles/trace_api/tasks/trace_api.yml
+++ b/provisioning/roles/trace_api/tasks/trace_api.yml
@@ -68,7 +68,7 @@
     path: /etc/nginx/sites-enabled/default
 
 - name: Configure nginx
-  copy:
+  template:
     src: trace_api
     dest: /etc/nginx/sites-available/trace-api
 
