--- a/provisioning/roles/trace_api/defaults/main.yml
+++ b/provisioning/roles/trace_api/defaults/main.yml
@@ -1,3 +1,8 @@
+# Database settings
 postgre_username: root
 postgre_password: test
 postgre_database: traces
+
+# Ability to change nginx max client upload size
+# see http://nginx.org/en/docs/http/ngx_http_core_module.html#client_max_body_size
+nginx_client_max_body_size: 128M
