--- a/provisioning/inventory.ini.template
+++ b/provisioning/inventory.ini.template
@@ -1,5 +1,5 @@
 [servers]
-ts-web ansible_host=<server name or IP>
+core.trace-share ansible_host=<server name or IP>
 
 [servers:vars]
 ansible_python_interpreter=/usr/bin/python3
