Fix of wrong user shell and usage of path in the service definition

--- a/provisioning/roles/trace_api/files/traceapi.service
+++ b/provisioning/roles/trace_api/files/traceapi.service
@@ -6,8 +6,7 @@ After=network.target
 User=traces
 Group=www-data
 WorkingDirectory=/trace-api/
-Environment="PATH=/trace-api/venv/bin"
-ExecStart=/trace-api/venv/bin/uwsgi --ini uwsgi.ini
+ExecStart=/bin/bash -c 'PATH=/trace-api/venv/bin:$PATH exec /trace-api/venv/bin/uwsgi --ini uwsgi.ini'
 
 [Install]
 WantedBy=multi-user.target
